--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Installing surge
         run: npm install --global surge
       - name: deploying using surge
-        run: surge ./ hdcore-finance.surge.sh --token ${{ secrets.TOKEN }}
+        run: surge ./ hdcore-vaults.surge.sh --token ${{ secrets.TOKEN }}
